; ModuleID = '/home/carl/AnghaBench/brotli/c/enc/extr_compress_fragment_two_pass.c_BrotliStoreMetaBlockHeader.c'
source_filename = "/home/carl/AnghaBench/brotli/c/enc/extr_compress_fragment_two_pass.c_BrotliStoreMetaBlockHeader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64, i64*, i32*)* @BrotliStoreMetaBlockHeader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @BrotliStoreMetaBlockHeader(i64 %0, i64 %1, i64* %2, i32* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64* %2, i64** %7, align 8
  store i32* %3, i32** %8, align 8
  store i64 6, i64* %9, align 8
  %10 = load i64*, i64** %7, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = call i32 @BrotliWriteBits(i32 1, i64 0, i64* %10, i32* %11)
  %13 = load i64, i64* %5, align 8
  %14 = icmp ule i64 %13, 65536
  br i1 %14, label %15, label %16

15:                                               ; preds = %4
  store i64 4, i64* %9, align 8
  br label %21

16:                                               ; preds = %4
  %17 = load i64, i64* %5, align 8
  %18 = icmp ule i64 %17, 1048576
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  store i64 5, i64* %9, align 8
  br label %20

20:                                               ; preds = %19, %16
  br label %21

21:                                               ; preds = %20, %15
  %22 = load i64, i64* %9, align 8
  %23 = sub i64 %22, 4
  %24 = load i64*, i64** %7, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @BrotliWriteBits(i32 2, i64 %23, i64* %24, i32* %25)
  %27 = load i64, i64* %9, align 8
  %28 = mul i64 %27, 4
  %29 = trunc i64 %28 to i32
  %30 = load i64, i64* %5, align 8
  %31 = sub i64 %30, 1
  %32 = load i64*, i64** %7, align 8
  %33 = load i32*, i32** %8, align 8
  %34 = call i32 @BrotliWriteBits(i32 %29, i64 %31, i64* %32, i32* %33)
  %35 = load i64, i64* %6, align 8
  %36 = load i64*, i64** %7, align 8
  %37 = load i32*, i32** %8, align 8
  %38 = call i32 @BrotliWriteBits(i32 1, i64 %35, i64* %36, i32* %37)
  ret void
}

declare dso_local i32 @BrotliWriteBits(i32, i64, i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
